<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rl_count_down"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeColor"
    android:clickable="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space16"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_down_title"
            android:textColor="@color/Light"
            android:textSize="18sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/space24">
            <TextView
                android:id="@+id/tv_count_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/space8"
                android:text="@string/counter_number"
                android:textAppearance="@style/EmergencyNumber"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seconds"
                android:textColor="@color/Light"
                android:textSize="@dimen/h3"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_stop_notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop_notification"
                android:background="@drawable/btn_stop_notification"
                android:textAllCaps="false"
                android:textColor="@color/brown"
                android:textStyle="bold"
                android:textSize="@dimen/btn"/>
            <Button
                android:id="@+id/btn_send_notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/space8"
                android:layout_marginStart="@dimen/space8"
                android:text="@string/send_notification"
                android:background="@drawable/btn_send_notification"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/btn"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>