<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.map.MainActivity"
    android:id="@+id/dl_container">
    <include
        layout="@layout/abb_bar_main" />
    <!--<include-->
        <!--layout="@layout/count_down_layout"/>-->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_side"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/NavViewBG"
        android:layout_gravity="start">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <include
                    layout="@layout/drawer_header" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space16"
                    android:layout_marginTop="@dimen/space24"
                    android:layout_marginBottom="@dimen/space8"
                    android:layout_marginLeft="@dimen/space16"
                    android:text="@string/settings"
                    android:textAppearance="@style/AllCapText"
                    android:textColor="@color/lowBrown" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/NavViewLightBG"
                    android:padding="@dimen/space16">
                    <TextView
                        android:id="@+id/tv_automatic_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/space4"
                        android:text="@string/automatically_call"
                        android:textColor="@color/ExtraLight"
                        android:textSize="@dimen/h3"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_automatic_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_automatic_title"
                        android:text="@string/automatically_call_desc"
                        android:textColor="@color/Light"
                        android:textSize="@dimen/p"
                        android:textStyle="bold"/>
                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/sc_auto_notify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/tv_automatic_title"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:theme="@style/switchStyle" />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space16"
                    android:layout_marginTop="@dimen/space24"
                    android:layout_marginLeft="@dimen/space16"
                    android:layout_marginBottom="@dimen/space8"
                    android:text="@string/instructions"
                    android:textAppearance="@style/AllCapText"
                    android:textColor="@color/lowBrown"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/space16"
                    android:background="@drawable/drawer_background_item"
                    android:clickable="true"
                    android:focusable="true">
                    <ImageView
                        android:id="@+id/img_aid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/space16"
                        android:layout_marginEnd="@dimen/space16"
                        android:src="@drawable/drawer_aid"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_toRightOf="@id/img_aid"
                        android:layout_toEndOf="@id/img_aid">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/space4"
                            android:text="@string/aid_title"
                            android:textColor="@color/ExtraLight"
                            android:textSize="@dimen/h3"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/aid_desc"
                            android:textColor="@color/Light"
                            android:textSize="@dimen/p"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/space16"
                    android:background="@drawable/drawer_background_item"
                    android:clickable="true"
                    android:focusable="true">
                    <ImageView
                        android:id="@+id/img_map"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/space16"
                        android:layout_marginEnd="@dimen/space16"
                        android:src="@drawable/drawer_map"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_toRightOf="@id/img_map"
                        android:layout_toEndOf="@id/img_map">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/space4"
                            android:text="@string/map_title"
                            android:textColor="@color/ExtraLight"
                            android:textSize="@dimen/h3"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/map_desc"
                            android:textColor="@color/Light"
                            android:textSize="@dimen/p"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>