<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_map_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <fragment
            android:id="@+id/fragment_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment" />
    </RelativeLayout>
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">
        <include
            layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">
        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space64"
            android:background="@drawable/view_map_shadow" />
        <LinearLayout
            android:id="@+id/ll_btns_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent"
            android:paddingTop="@dimen/space4"
            android:paddingRight="@dimen/space16"
            android:paddingBottom="@dimen/space16"
            android:paddingLeft="@dimen/space16">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manual_title"
                android:textAppearance="@style/AllCapText"
                android:textColor="@color/lowBrown"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/space8"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space16"
                android:text="@string/manual_desc"
                android:textColor="@color/ExtraLight"
                android:textSize="@dimen/h3"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space16"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_fire"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:layout_marginRight="@dimen/space8"
                    android:layout_weight="1"
                    android:background="@drawable/btn_fire_gradient"
                    android:drawableRight="@drawable/btn_fire"
                    android:includeFontPadding="false"
                    android:paddingBottom="0dp"
                    android:paddingLeft="@dimen/space16"
                    android:paddingRight="@dimen/space16"
                    android:paddingStart="@dimen/space16"
                    android:paddingTop="0dp"
                    android:text="@string/fire"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/btn_electricity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/space8"
                    android:background="@drawable/btn_electricity_gradient"
                    android:drawableRight="@drawable/btn_electricity"
                    android:gravity="left|center_vertical"
                    android:includeFontPadding="false"
                    android:paddingRight="@dimen/space16"
                    android:paddingStart="@dimen/space16"
                    android:paddingTop="0dp"
                    android:paddingLeft="@dimen/space16"
                    android:paddingBottom="0dp"
                    android:text="@string/electricity"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space16"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_patient"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/space8"
                    android:background="@drawable/btn_patient_gradient"
                    android:drawableRight="@drawable/btn_patient"
                    android:gravity="left|center_vertical"
                    android:includeFontPadding="false"
                    android:paddingRight="@dimen/space16"
                    android:paddingStart="@dimen/space16"
                    android:paddingTop="0dp"
                    android:paddingLeft="@dimen/space16"
                    android:paddingBottom="0dp"
                    android:text="@string/patient"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/btn_accident"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/space8"
                    android:background="@drawable/btn_accident_gradient"
                    android:drawableRight="@drawable/btn_accident"
                    android:gravity="left|center_vertical"
                    android:includeFontPadding="false"
                    android:paddingRight="@dimen/space16"
                    android:paddingStart="@dimen/space16"
                    android:paddingTop="0dp"
                    android:paddingLeft="@dimen/space16"
                    android:paddingBottom="0dp"
                    android:text="@string/accident"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>